--- a/index.html
+++ b/index.html
@@ -18,9 +18,35 @@
         <a href="#">Three</a>
       </div>
     </nav>
-    <section class="carousel">
+<div class="slideshow-container">
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 4</div>
+    <img src="img/sunset.jpg" style="width:100%">
+    <div class="text">Caption Text</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 4</div>
+    <img src="img/mount.jpg" style="width:100%">
+    <div class="text">Caption Two</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 4</div>
+    <img src="img/ireland.jpg" style="width:100%">
+    <div class="text">Caption Three</div>
+  </div>
+  <div class="mySlides fade">
+    <div class="numbertext">4 / 4</div>
+    <img src="img/horse.jpg" style="width:100%">
+    <div class="text">Caption Four</div>
+  </div>
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+
 ...
-    </section>
+
     <main class="gallery">
 <article class="card">
         <div class="card-img">
