--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
     <title>My media gallery</title>
   </head>
   <body>
-    <nav class="main-nav">
-      <div class="logo-container">
-        <img src="" alt="" >
-      </div>
-      <div class="nav-links">
-        <a href="#">One</a>
-        <a href="#">Two</a>
-        <a href="#">Three</a>
-      </div>
-    </nav>
+    <nav>
+     <div class="title">
+       Sofie's Gallery
+     </div>
+     <div class="links">
+       <a href="#">Photography</a>
+       <a href="#">Credit</a>
+       <a href="#">More</a>
+     </div>
+   </nav>
 <div class="slideshow-container">
   <div class="mySlides fade">
     <div class="numbertext">1 / 4</div>
-    <img src="img/sunset.jpg" style="width:100%">
+    <img src="img/goat.jpg" style="width:100%">
     <div class="text">Caption Text</div>
   </div>
   <div class="mySlides fade">
     <div class="numbertext">2 / 4</div>
-    <img src="img/mount.jpg" style="width:100%">
+    <img src="img/cascade.jpg" style="width:100%">
     <div class="text">Caption Two</div>
   </div>
   <div class="mySlides fade">
@@ -36,7 +36,7 @@
   </div>
   <div class="mySlides fade">
     <div class="numbertext">4 / 4</div>
-    <img src="img/horse.jpg" style="width:100%">
+    <img src="img/sunset.jpg" style="width:100%">
     <div class="text">Caption Four</div>
   </div>
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -55,7 +55,7 @@
     <main class="gallery">
 <article class="card">
         <div class="card-img">
-          <img src="" alt="" >
+          <img src="img/horse2.jpg" alt="" >
         </div>
         <div class="card-content">
           <h3>Card Title</h3>
@@ -64,7 +64,7 @@
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="" alt="" >
+          <img src="img/dog.jpg" alt="" >
         </div>
         <div class="card-content">
           <h3>Card Title</h3>
@@ -74,7 +74,7 @@
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="" alt="" >
+          <img src="img/cow.jpg" alt="" >
         </div>
         <div class="card-content">
           <h3>Card Title</h3>
@@ -83,7 +83,7 @@
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="" alt="" >
+          <img src="img/flamingo.jpg" alt="" >
         </div>
         <div class="card-content">
           <h3>Card Title</h3>
@@ -92,7 +92,7 @@
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="" alt="" >
+          <img src="img/pompeii.jpg" alt="" >
         </div>
         <div class="card-content">
           <h3>Card Title</h3>
@@ -101,7 +101,7 @@
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="" alt="" >
+          <img src="img/stair.jpg" alt="" >
         </div>
         <div class="card-content">
           <h3>Card Title</h3>
@@ -110,7 +110,7 @@
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="" alt="" >
+          <img src="img/city.jpg" alt="" >
         </div>
         <div class="card-content">
           <h3>Card Title</h3>
@@ -119,7 +119,7 @@
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="" alt="" >
+          <img src="img/yard.jpg" alt="" >
         </div>
         <div class="card-content">
           <h3>Card Title</h3>
@@ -128,7 +128,7 @@
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="" alt="" >
+          <img src="img/rose.jpg" alt="" >
         </div>
         <div class="card-content">
           <h3>Card Title</h3>
@@ -137,7 +137,7 @@
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="" alt="" >
+          <img src="img/snow.jpg" alt="" >
         </div>
         <div class="card-content">
           <h3>Card Title</h3>
@@ -146,7 +146,7 @@
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="" alt="" >
+          <img src="img/orange.jpg" alt="" >
         </div>
         <div class="card-content">
           <h3>Card Title</h3>
@@ -155,7 +155,7 @@
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="" alt="" >
+          <img src="img/flower.jpg" alt="" >
         </div>
         <div class="card-content">
           <h3>Card Title</h3>
