--- a/index.html
+++ b/index.html
@@ -18,37 +18,53 @@
        <a href="#">More</a>
      </div>
    </nav>
-<div class="slideshow-container">
-  <div class="mySlides fade">
+<div class="container">
+
+  <div class="mySlides">
     <div class="numbertext">1 / 4</div>
     <img src="img/goat.jpg" style="width:100%">
     <div class="text">Caption Text</div>
   </div>
-  <div class="mySlides fade">
+
+  <div class="mySlides">
     <div class="numbertext">2 / 4</div>
     <img src="img/cascade.jpg" style="width:100%">
     <div class="text">Caption Two</div>
   </div>
-  <div class="mySlides fade">
+
+  <div class="mySlides">
     <div class="numbertext">3 / 4</div>
     <img src="img/ireland.jpg" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
+
   <div class="mySlides fade">
     <div class="numbertext">4 / 4</div>
     <img src="img/sunset.jpg" style="width:100%">
     <div class="text">Caption Four</div>
   </div>
+
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br>
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-  <span class="dot" onclick="currentSlide(4)"></span>
-</div>
+
+  <div class="caption-container">
+      <p id="caption"></p>
+  </div>
+
+  <div class="row">
+  <div class="column">
+    <img class="demo cursor" src="img/goat.jpg" style="width:100%" onclick="currentSlide(1)"
+alt="Billy Goats">
+  </div>
+  <div class="column">
+    <img class="demo cursor" src="img/cascade.jpg" style="width:100%" onclick="currentSlide(2)"
+alt="Sunrise over Cascade">
+  </div>
+  <div class="column">
+    <img class="demo cursor" src="img/ireland.jpg" style="width:100%" onclick="currentSlide(3)"
+alt="Cliffs of Dover">
+  </div>
+
 
 ...
 
