--- a/index.html
+++ b/index.html
@@ -18,56 +18,39 @@
        <a href="#">More</a>
      </div>
    </nav>
-<div class="container">
-
-  <div class="mySlides">
-    <div class="numbertext">1 / 4</div>
-    <img src="img/goat.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">2 / 4</div>
-    <img src="img/cascade.jpg" style="width:100%">
-    <div class="text">Caption Two</div>
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">3 / 4</div>
-    <img src="img/ireland.jpg" style="width:100%">
-    <div class="text">Caption Three</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">4 / 4</div>
-    <img src="img/sunset.jpg" style="width:100%">
-    <div class="text">Caption Four</div>
-  </div>
-
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-  <div class="caption-container">
-      <p id="caption"></p>
-  </div>
-
-  <div class="row">
-  <div class="column">
-    <img class="demo cursor" src="img/goat.jpg" style="width:100%" onclick="currentSlide(1)"
-alt="Billy Goats">
-  </div>
-  <div class="column">
-    <img class="demo cursor" src="img/cascade.jpg" style="width:100%" onclick="currentSlide(2)"
-alt="Sunrise over Cascade">
-  </div>
-  <div class="column">
-    <img class="demo cursor" src="img/ireland.jpg" style="width:100%" onclick="currentSlide(3)"
-alt="Cliffs of Dover">
-  </div>
-
-
-...
-
+   <section class="slideshow">
+     <div class="slideshow-wrapper">
+       <div class="slide fade">
+         <div class="numberof">1 of 4</div>
+         <img src="img/goat.jpg"/>
+         <div class="captiontext">Billy Goats.</div>
+       </div>
+       <div class="slide fade">
+         <div class="numberof">2 of 4</div>
+         <img src="img/cascade.jpg"/>
+         <div class="captiontext">Sunrise over Cascade.</div>
+       </div>
+       <div class="slide fade">
+         <div class="numberof">3 of 4</div>
+         <img src="img/ireland.jpg"/>
+         <div class="captiontext">Cliffs of Dover.</div>
+       </div>
+       <div class="slide fade">
+         <div class="number">4 of 4</div>
+         <img src="img/sunset.jpg"/>
+         <div class="captiontext">A sunset on the water.</div>
+       </div>
+       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+       <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br />
+    <div class="text-center">
+        <span class="indicator" onclick="currentSlide(1)"><img src="img/goat.jpg"/></span>
+        <span class="indicator" onclick="currentSlide(2)"><img src="img/cascade.jpg"/></span>
+        <span class="indicator" onclick="currentSlide(3)"><img src="img/ireland.jpg"/></span>
+        <span class="indicator" onclick="currentSlide(4)"><img src="img/sunset.jpg"/></span>
+    </div>
+    
     <main class="gallery">
 <article class="card">
         <div class="card-img">
