Im not even sure

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
      <div class="slideshow-wrapper">
        <div class="slide fade">
          <div class="numberof">1 of 4</div>
-         <img src="img/goat.jpg"/>
-         <div class="captiontext">Billy Goats.</div>
+         <img src="img/black.jpg"/>
+         <div class="captiontext">A lonely field.</div>
        </div>
        <div class="slide fade">
          <div class="numberof">2 of 4</div>
@@ -45,21 +45,21 @@
     </div>
     <br />
     <div class="text-center">
-        <span class="indicator" onclick="currentSlide(1)"><img src="img/goat.jpg"/></span>
+        <span class="indicator" onclick="currentSlide(1)"><img src="img/black.jpg"/></span>
         <span class="indicator" onclick="currentSlide(2)"><img src="img/cascade.jpg"/></span>
         <span class="indicator" onclick="currentSlide(3)"><img src="img/ireland.jpg"/></span>
         <span class="indicator" onclick="currentSlide(4)"><img src="img/sunset.jpg"/></span>
     </div>
-    
+  </section>
     <main class="gallery">
-<article class="card">
+      <article class="card">
         <div class="card-img">
           <img src="img/horse2.jpg" alt="" >
         </div>
         <div class="card-content">
-          <h3>Card Title</h3>
-          <p>Lorem ipsum dolor sit amet conspecitur elid sed muscat.</p>
-        </div><!--end .card-content-->
+          <h3>Race horse at rest.</h3>
+          <p>A loyal race horse takes a rest and poses for a photo.</p>
+        </div>
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
