Labeling my cards

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <img src="img/horse2.jpg" alt="" >
         </div>
         <div class="card-content">
-          <h3>Race horse at rest.</h3>
+          <h3>Race horse at rest</h3>
           <p>A loyal race horse takes a rest and poses for a photo.</p>
         </div>
       </article><!--end .card-->
@@ -66,8 +66,8 @@
           <img src="img/dog.jpg" alt="" >
         </div>
         <div class="card-content">
-          <h3>Card Title</h3>
-          <p>Lorem ipsum dolor sit amet conspecitur elid sed muscat.</p>
+          <h3>The winter pup</h3>
+          <p>A puppy as white as the snow sits patiently by the cold water.</p>
           <a href="#" class="btn">More</a>
         </div><!--end .card-content-->
       </article><!--end .card-->
@@ -76,8 +76,8 @@
           <img src="img/cow.jpg" alt="" >
         </div>
         <div class="card-content">
-          <h3>Card Title</h3>
-          <p>Lorem ipsum dolor sit amet conspecitur elid sed muscat.</p>
+          <h3>Love is everywhere</h3>
+          <p>Two calves share a kiss at the end of a rainbow.</p>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
@@ -85,8 +85,8 @@
           <img src="img/flamingo.jpg" alt="" >
         </div>
         <div class="card-content">
-          <h3>Card Title</h3>
-          <p>Lorem ipsum dolor sit amet conspecitur elid sed muscat.</p>
+          <h3>On the hunt for shrimp</h3>
+          <p>Legend says that flamingos are born white, and start to gain their bright pink color from their strict diet of shrimp.</p>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
@@ -94,8 +94,8 @@
           <img src="img/pompeii.jpg" alt="" >
         </div>
         <div class="card-content">
-          <h3>Card Title</h3>
-          <p>Lorem ipsum dolor sit amet conspecitur elid sed muscat.</p>
+          <h3>The walls are tumbling down</h3>
+          <p>Pompeii is notorious for its famous story of the city being burned by the lava from Mt. Vesuvius. Remains of the city stayed behind leaving Pompeii with lonely faces.</p>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
@@ -103,8 +103,8 @@
           <img src="img/stair.jpg" alt="" >
         </div>
         <div class="card-content">
-          <h3>Card Title</h3>
-          <p>Lorem ipsum dolor sit amet conspecitur elid sed muscat.</p>
+          <h3>A downward spiral</h3>
+          <p>Some lonely staircase in an Italian ruin.</p>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
@@ -112,8 +112,8 @@
           <img src="img/city.jpg" alt="" >
         </div>
         <div class="card-content">
-          <h3>Card Title</h3>
-          <p>Lorem ipsum dolor sit amet conspecitur elid sed muscat.</p>
+          <h3>At the top of a small city</h3>
+          <p>This took just a small cable car ride up to the top of the Island of Capri to look down at the city below us.</p>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
@@ -121,8 +121,8 @@
           <img src="img/yard.jpg" alt="" >
         </div>
         <div class="card-content">
-          <h3>Card Title</h3>
-          <p>Lorem ipsum dolor sit amet conspecitur elid sed muscat.</p>
+          <h3>A hidden gem</h3>
+          <p>A secret walkway leading to the beautiful home of an Italian man and his wife.</p>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
@@ -130,8 +130,8 @@
           <img src="img/rose.jpg" alt="" >
         </div>
         <div class="card-content">
-          <h3>Card Title</h3>
-          <p>Lorem ipsum dolor sit amet conspecitur elid sed muscat.</p>
+          <h3>Rose Rose Rose</h3>
+          <p>A bushel of roses on the verge of losing their last bit of life.</p>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
@@ -139,8 +139,8 @@
           <img src="img/snow.jpg" alt="" >
         </div>
         <div class="card-content">
-          <h3>Card Title</h3>
-          <p>Lorem ipsum dolor sit amet conspecitur elid sed muscat.</p>
+          <h3>The first snowfall</h3>
+          <p>Just looking at this photo makes you feel like you are breathing in the cold crisp air into your lungs.</p>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
@@ -148,8 +148,8 @@
           <img src="img/orange.jpg" alt="" >
         </div>
         <div class="card-content">
-          <h3>Card Title</h3>
-          <p>Lorem ipsum dolor sit amet conspecitur elid sed muscat.</p>
+          <h3>When life gives you oranges</h3>
+          <p>There is nothing quite like freshly squeezed orange juice in the morning.</p>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
@@ -157,8 +157,8 @@
           <img src="img/flower.jpg" alt="" >
         </div>
         <div class="card-content">
-          <h3>Card Title</h3>
-          <p>Lorem ipsum dolor sit amet conspecitur elid sed muscat.</p>
+          <h3>Blurred Lines</h3>
+          <p>Sometimes it is more important to just focus on what is right in front of us rather than everything that surrounds it.</p>
         </div><!--end .card-content-->
       </article><!--end .card-->
     </main>
