--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
        <div class="slide fade">
          <div class="numberof">1 of 4</div>
          <img src="img/black.jpg"/>
-         <div class="captiontext">A lonely field.</div>
+         <div class="captiontext">A lonely field</div>
        </div>
        <div class="slide fade">
          <div class="numberof">2 of 4</div>
          <img src="img/cascade.jpg"/>
-         <div class="captiontext">Sunrise over Cascade.</div>
+         <div class="captiontext">Sunrise over Cascade</div>
        </div>
        <div class="slide fade">
          <div class="numberof">3 of 4</div>
          <img src="img/ireland.jpg"/>
-         <div class="captiontext">Cliffs of Dover.</div>
+         <div class="captiontext">Cliffs of Dover</div>
        </div>
        <div class="slide fade">
          <div class="number">4 of 4</div>
          <img src="img/sunset.jpg"/>
-         <div class="captiontext">A sunset on the water.</div>
+         <div class="captiontext">A sunset on the water</div>
        </div>
        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
        <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -165,5 +165,6 @@
     <footer>
       <p>&copy;2021 Sofie</p>
     </footer>
+    <script type="text/javascript" src="js/page.js"></script>
   </body>
 </html>
