--- a/index.html
+++ b/index.html
@@ -8,16 +8,24 @@
     <title>My media gallery</title>
   </head>
   <body>
-    <nav>
-     <div class="title">
-       Sofie's Gallery
-     </div>
-     <div class="links">
-       <a href="#">Photography</a>
-       <a href="#">Credit</a>
-       <a href="#">More</a>
-     </div>
-   </nav>
+    <nav id="main-nav" class="topnav">
+    <a class="nav-item logo">
+      <span class="label"><i class="fas fa-home"></i>Home</span>
+    </a>
+    <a class="nav-item">
+      <span class="label"><i class="fas fa-file-upload"></i>Upload</span>
+    </a>
+    <a class="nav-item">
+      <span class="label"><i class="fas fa-info-circle"></i>Info</span>
+    </a>
+    <a class="nav-item">
+      <span class="label"><i class="fas fa-quote-left"></i>Credits</span>
+    </a>
+    <a class="nav-item more">
+      <span class="label"><i class="fas fa-ellipsis-h"></i>More</span>
+    </a>
+    <a href="javascript:void(0);" class="nav-item trigram" onclick="navToggle()">&#9776;</a>
+  </nav>
    <section class="slideshow">
      <div class="slideshow-wrapper">
        <div class="slide fade">
@@ -53,37 +61,29 @@
   </section>
     <main class="gallery">
       <article class="card">
-        <div class="thumb"></div><hr />
         <div class="card-img">
-          <img src="img/horse2.jpg" alt="" >
+          <img id="myImg1" src="img/horse2.jpg" alt=" Horses are one of the most majestic and powerful animals on the planet. Even these strong animals need to take a rest before being pushed to cross over the finish line." style="width:100%;max-width:300px">
+          <div id="myModal" class="modal">
+            <span class="close">&times;</span>
+            <img class="modal-content" id="img/horse2.jpg">
+            <div id="caption"></div>
+          </div>
         <div class="card-content">
           <h3>Race horse at rest</h3>
           <p>A loyal race horse takes a rest and poses for a photo.</p>
-          <button data-modal="09" class="card-more button">View</button>
         </div>
       </article>
-        <div id="09" class="modal">
-                    <div class="modal-content">
-                      <span class="close">&times;</span>
-                                  <div class="modal-body">
-            <img src="img/horse2.jpg" alt="example" />
-                                        <div class="eg-text">
-                                                <h3>Race horse at rest</h3>
-                                                <p>A loyal race horse takes a rest and poses for a photo. Horses are one of the most powerful and majestic animals to ever exist. Sometimes even these powerhouses need a quick rest before they push their hardest to cross the finish line</p>
-                                        </div>
-                                  </div>
-                    </div>
-        </div>
-
-      </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="img/dog.jpg" alt="" >
+          <img id="myImg2" src="img/dog.jpg" alt="" style="width:100%;max-width:300px">
+          <div id="myModal" class="modal">
+            <span class="close">&times;</span>
+            <img class="modal-content" id="img/dog.jpg">
+            <div id="caption"></div>
         </div>
         <div class="card-content">
           <h3>The winter pup</h3>
           <p>A puppy as white as the snow sits patiently by the cold water.</p>
-          <a href="#" class="btn">More</a>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
