--- a/index.html
+++ b/index.html
@@ -85,41 +85,85 @@
       <article class="card">
         <div class="card-img">
           <img id="myImg2" src="img/dog.jpg" alt="" style="width:100%;max-width:300px">
-          <div id="myModal" class="modal">
-            <span class="close">&times;</span>
-            <img class="modal-content" id="img/dog.jpg">
-            <div id="caption"></div>
         </div>
         <div class="card-content">
           <h3>The winter pup</h3>
           <p>A puppy as white as the snow sits patiently by the cold water.</p>
+          <button data-modal="#02" class="card-more button">View</button>
+          <div id="02" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <div class="modal-body">
+                <img src="img/dog.jpg" alt="Horses are one of the most majestic and powerful animals on the planet. Even these strong animals need to take a rest before being pushed to cross over the finish line" />
+                <div class="eg-text">
+                  <h3>The winter pup</h3>
+                  <p>A puppy as white as the snow sits patiently by the cold water. His mom and dad have taken him on his first hike and he needs a little sip of water before the treck back home.</p>
+                </div>
+            </div>
+          </div>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="img/cow.jpg" alt="" >
+          <img id="myImg2" src="img/cow.jpg" alt="" style="width:100%;max-width:300px">
         </div>
         <div class="card-content">
           <h3>Love is everywhere</h3>
           <p>Two calves share a kiss at the end of a rainbow.</p>
+          <button data-modal="#03" class="card-more button">View</button>
+          <div id="03" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <div class="modal-body">
+                <img src="img/cow.jpg" alt=""/>
+                <div class="eg-text">
+                  <h3>Love is everywhere</h3>
+                  <p>Two calves share a kiss at the end of a rainbow. Their snuggly faces and love for each other makes you feel warm and happy inside.</p>
+                </div>
+            </div>
+          </div>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="img/flamingo.jpg" alt="" >
+          <img id="myImg2" src="img/flamingo.jpg" alt="" style="width:100%;max-width:300px">
         </div>
         <div class="card-content">
           <h3>On the hunt for shrimp</h3>
           <p>Legend says that flamingos are born white, and start to gain their bright pink color from their strict diet of shrimp.</p>
+          <button data-modal="#04" class="card-more button">View</button>
+          <div id="04" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <div class="modal-body">
+                <img src="img/flamingo.jpg" alt=""/>
+                <div class="eg-text">
+                  <h3>On the hunt for shrimp</h3>
+                  <p>Legend says that flamingos are born white, and start to gain their bright pink color from their strict diet of shrimp. Now, who knows if this is true, but it does make you wonder where their shockingly pink color comes from.</p>
+                </div>
+            </div>
+          </div>
         </div><!--end .card-content-->
-      </article><!--end .card-->
+      </article><!--end .Remains of the city stayed behind leaving Pompeii with lonely faces.card-->
       <article class="card">
         <div class="card-img">
-          <img src="img/pompeii.jpg" alt="" >
+            <img id="myImg2" src="img/pompeii.jpg" alt="" style="width:100%;max-width:300px">
         </div>
         <div class="card-content">
           <h3>The walls are tumbling down</h3>
-          <p>Pompeii is notorious for its famous story of the city being burned by the lava from Mt. Vesuvius. Remains of the city stayed behind leaving Pompeii with lonely faces.</p>
+          <p>Pompeii is notorious for its famous story of the city being burned by the lava from Mt. Vesuvius.</p>
+          <button data-modal="#05" class="card-more button">View</button>
+          <div id="05" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <div class="modal-body">
+                <img src="img/pompeii.jpg" alt=""/>
+                <div class="eg-text">
+                  <h3>The walls are tumbling down</h3>
+                  <p>Pompeii is notorious for its famous story of the city being burned by the lava from Mt. Vesuvius. Remains of the city stayed behind leaving Pompeii with lonely faces.</p>
+                </div>
+            </div>
+          </div>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
