--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </div>
           </div>
         </div><!--end .card-content-->
-      </article><!--end .Remains of the city stayed behind leaving Pompeii with lonely faces.card-->
+      </article><!--end .card-->
       <article class="card">
         <div class="card-img">
             <img id="myImg2" src="img/pompeii.jpg" alt="" style="width:100%;max-width:300px">
@@ -168,11 +168,23 @@
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="img/stair.jpg" alt="" >
+          <img id="myImg2" src="img/stair.jpg" alt="" style="width:100%;max-width:300px">
         </div>
         <div class="card-content">
           <h3>A downward spiral</h3>
           <p>Some lonely staircase in an Italian ruin.</p>
+          <button data-modal="#06" class="card-more button">View</button>
+          <div id="06" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <div class="modal-body">
+                <img src="img/stair.jpg" alt=""/>
+                <div class="eg-text">
+                  <h3>A downward spiral</h3>
+                  <p>Some lonely staircase in an Italian ruin. The gardens of Tivoli have some of the most secret destinations. It takes a curious mind to go down the spiral to see where you may end up.</p>
+                </div>
+            </div>
+          </div>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
