Finally got my modals

--- a/index.html
+++ b/index.html
@@ -189,56 +189,128 @@
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="img/city.jpg" alt="" >
+          <img id="myImg2" src="img/city.jpg" alt="" style="width:100%;max-width:300px">
         </div>
         <div class="card-content">
           <h3>At the top of a small city</h3>
           <p>This took just a small cable car ride up to the top of the Island of Capri to look down at the city below us.</p>
+          <button data-modal="#07" class="card-more button">View</button>
+          <div id="07" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <div class="modal-body">
+                <img src="img/city.jpg" alt=""/>
+                <div class="eg-text">
+                  <h3>At the top of a small city</h3>
+                  <p>This took just a small cable car ride up to the top of the Island of Capri to look down at the city below us. The Island of Capri is a gorgeous spot to take a small trip to for lunch. It hangs right off the boot of Italy and is just a short ferry ride across the beautiful Mediterranean.</p>
+                </div>
+            </div>
+          </div>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="img/yard.jpg" alt="" >
+          <img id="myImg2" src="img/yard.jpg" alt="" style="width:100%;max-width:300px">
         </div>
         <div class="card-content">
           <h3>A hidden gem</h3>
           <p>A secret walkway leading to the beautiful home of an Italian man and his wife.</p>
+          <button data-modal="#08" class="card-more button">View</button>
+            <div id="08" class="modal">
+              <div class="modal-content">
+                <span class="close">&times;</span>
+                <div class="modal-body">
+                  <img src="img/yard.jpg" alt=""/>
+                  <div class="eg-text">
+                    <h3>A hidden gem</h3>
+                    <p>A secret walkway leading to the beautiful home of an Italian man and his wife. The most beautiful lilac flowers encompasses this walkway, it feels as though it is an arc where someone would get married under it. It seems to be the most perfect way to enter your home with your spouse after a long day.</p>
+                  </div>
+              </div>
+            </div>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="img/rose.jpg" alt="" >
+          <img id="myImg2" src="img/rose.jpg" alt="" style="width:100%;max-width:300px">
         </div>
         <div class="card-content">
           <h3>Rose Rose Rose</h3>
           <p>A bushel of roses on the verge of losing their last bit of life.</p>
+          <button data-modal="#09" class="card-more button">View</button>
+            <div id="09" class="modal">
+              <div class="modal-content">
+                <span class="close">&times;</span>
+                <div class="modal-body">
+                  <img src="img/rose.jpg" alt=""/>
+                  <div class="eg-text">
+                    <h3>Rose Rose Rose</h3>
+                    <p>A bushel of roses on the verge of losing their last bit of life. This image shows you the dry and helpless flowers that are soon going to wilt without any sips of water. Although it is sad to see somethingt so beautful die, you can use the dried petals for something even more beautiful later on.</p>
+                  </div>
+              </div>
+            </div>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="img/snow.jpg" alt="" >
+          <img id="myImg2" src="img/snow.jpg" alt="" style="width:100%;max-width:300px">
         </div>
         <div class="card-content">
           <h3>The first snowfall</h3>
           <p>Just looking at this photo makes you feel like you are breathing in the cold crisp air into your lungs.</p>
+          <button data-modal="#10" class="card-more button">View</button>
+            <div id="10" class="modal">
+              <div class="modal-content">
+                <span class="close">&times;</span>
+                <div class="modal-body">
+                  <img src="img/snow.jpg" alt=""/>
+                  <div class="eg-text">
+                    <h3>The first snowfall</h3>
+                    <p>Just looking at this photo makes you feel like you are breathing in the cold crisp air into your lungs. Nothing is quite like waking up to first real snowfall of the winter. You look out your window to see a beautiful winter wonderland of all.</p>
+                  </div>
+              </div>
+            </div>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="img/orange.jpg" alt="" >
+          <img id="myImg2" src="img/orange.jpg" alt="" style="width:100%;max-width:300px">
         </div>
         <div class="card-content">
           <h3>When life gives you oranges</h3>
           <p>There is nothing quite like freshly squeezed orange juice in the morning.</p>
+          <button data-modal="#11" class="card-more button">View</button>
+            <div id="11" class="modal">
+              <div class="modal-content">
+                <span class="close">&times;</span>
+                <div class="modal-body">
+                  <img src="img/orange.jpg" alt=""/>
+                  <div class="eg-text">
+                    <h3>When life gives you oranges</h3>
+                    <p>There is nothing quite like freshly squeezed orange juice in the morning. The citrus from these oranges will keep you feeling young and fresh for the day!</p>
+                  </div>
+              </div>
+            </div>
         </div><!--end .card-content-->
       </article><!--end .card-->
       <article class="card">
         <div class="card-img">
-          <img src="img/flower.jpg" alt="" >
+            <img id="myImg2" src="img/flower.jpg" alt="" style="width:100%;max-width:300px">
         </div>
         <div class="card-content">
           <h3>Blurred Lines</h3>
           <p>Sometimes it is more important to just focus on what is right in front of us rather than everything that surrounds it.</p>
+          <button data-modal="#12" class="card-more button">View</button>
+            <div id="12" class="modal">
+              <div class="modal-content">
+                <span class="close">&times;</span>
+                <div class="modal-body">
+                  <img src="img/flower.jpg" alt=""/>
+                  <div class="eg-text">
+                    <h3>Blurred Lines</h3>
+                    <p>Sometimes it is more important to just focus on what is right in front of us rather than everything that surrounds it. This photo represents the important things in life, which are the things that appear bright and clear right in front of you.</p>
+                  </div>
+              </div>
+            </div>
         </div><!--end .card-content-->
       </article><!--end .card-->
     </main>
